# api-specs/openapi.yaml
@@ -148,6 +148,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
           description: 이메일 또는 비밀번호 불일치
+        "429":
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: 로그인 시도 횟수 제한 초과
       summary: 로그인
       tags:
       - Auth
